--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ env:
   PYTHON_VERSION_RELEASE: "3.11"
   PYTHON_VERSION_BUILD_DOCS: "3.11"
   PYTHON_VERSION_UPDATE_WEB: "3.11"
+  POETRY_VERSION: "1.4"
 
 on:
   pull_request_target:
@@ -175,7 +176,7 @@ jobs:
           key: venv-build-${{ matrix.os }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install poetry
-        run: python -m pip install poetry==1.4
+        run: python -m pip install poetry==${{ env.POETRY_VERSION }}
 
       - name: Configure poetry
         run: |
@@ -386,7 +387,7 @@ jobs:
           key: venv-release-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install poetry
-        run: python -m pip install poetry==1.4
+        run: python -m pip install poetry==${{ env.POETRY_VERSION }}
 
       - name: Configure poetry
         run: |
@@ -496,7 +497,7 @@ jobs:
           key: venv-release-${{ matrix.os }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install poetry
-        run: python -m pip install poetry==1.4
+        run: python -m pip install poetry==${{ env.POETRY_VERSION }}
 
       - name: Configure poetry
         run: |
