--- a/.github/workflows/bump-downstream.yml
+++ b/.github/workflows/bump-downstream.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   create-matflow-pull-request:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ( github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' )
     runs-on: ubuntu-latest
     steps:
       - name: Checkout MatFlow
